--- a/src/main/resources/authentification.html
+++ b/src/main/resources/authentification.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>MVC Web application</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
+
 <body>
+<h1>Authentication</h1>
+
+
+<form action="login">
+   Email : <input type="email" id="email"><br>
+   Password :  <input type="password" id="password"><br>
+    <input type="submit" />
+</form>
 
 </body>
 </html>
